--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "morgan": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
@@ -12,6 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "sudo forever -o out.log -e err.log start index.js",
+    "stopserver": "sudo forever stop index.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
