api folder added

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "eslint": "^5.6.1",
     "eslint-config-4catalyzer-react": "^0.4.4",
     "eslint-loader": "^2.1.1",
@@ -11,18 +12,29 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
+    "express": "^4.16.4",
+    "jwt-simple": "^0.5.5",
     "morgan": "^1.9.0",
+    "mysql": "^2.16.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "password-hash": "^1.2.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "api-start": "nodemon api/index.js",
     "build": "react-scripts build",
     "server": "sudo forever -o out.log -e err.log start index.js",
-    "stopserver": "sudo forever stop index.js",
+    "stop-server": "sudo forever stop index.js",
+    "api-server": "sudo forever -o api/out.log -e api/err.log start api/index.js",
+    "stop-api-server": "sudo forever stop api/index.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
