--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.5",
     "eslint": "^5.6.1",
     "eslint-config-4catalyzer-react": "^0.4.4",
