--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
     "cors": "^2.8.5",
     "eslint": "^5.14.0",
     "eslint-config-4catalyzer-react": "^0.8.3",
