--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "password-hash": "^1.2.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-player": "^1.11.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
