add soccer section

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -136,7 +136,7 @@
     "padded-blocks": [2, "never"],
     "quotes": [
       2,
-      "single",
+      "double",
       { "avoidEscape": true, "allowTemplateLiterals": true }
     ],
     "react/no-unused-prop-types": [2],
